@@ -9,7 +9,6 @@ evaporation=Evaporation
 lightView=Light view
 lots=lots
 none=none
-percentTransmittance=% Transmittance
 photons=photons
 removeSolute=Remove Solute
 saturated=Saturated!
@@ -18,6 +17,7 @@ solute=Solute
 solution=Solution
 tab.beersLaw=Beer's Law
 tab.concentration=Concentration
+transmittance=Transmittance
 units.centimeters=cm
 units.liters=L
 units.molesPerLiter=mol/L
